[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "amplicon_coverage_inspector"
version = "1.0.20231222"
authors = [
    {name = "Erin Young", email = "eriny@utah.gov"}
]
maintainers = [
    {name = "Erin Young", email = "eriny@utah.gov"}
]
description = "Amplicon Coverage Inspector determines coverage for amplicons"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "bioinformatics",
    "amplicon",
    "coverage",
    "visualization",
]
dependencies = [
    "pandas>=2.1.4",
    "pysam>=0.22.0",
    "matplotlib>=3.8.2",
    "numpy>=1.26.2",
]

[project.scripts]
aci = "aci/aci.py:main"

[project.urls]
"Homepage" = "https://github.com/erinyoung/ACI"
"Bug Tracker" = "https://github.com/erinyoung/ACI/issues"