[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplicon_coverage_inspector"
version = "1.45.251125"
description = "Visualization of coverage for amplicon sequencing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Erin Young", email = "eriny@utah.gov"}
]
keywords = ["bioinformatics", "amplicon", "coverage", "visualization", "pysam"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "pandas",
  "pysam",
  "matplotlib",
  "numpy",
  "intervaltree"
]

[project.scripts]
# We moved the main file to cli.py, so we must update this entry point
aci = "aci.cli:main"

[project.urls]
Source = 'https://github.com/erinyoung/ACI'

# --- THE FIX IS HERE ---
[tool.setuptools.packages.find]
where = ["src"]  # <--- This tells pip: "The code is now inside the src folder!"
include = ["aci", "aci.*"]
